--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 title:              Portfolio Template
 email:              your-email@domain.com
 description:        "Portfolio template for students in the MSR program at Northwestern University"
-url:                "http://localhost:4000"
-baseurl:            /msr-student-template
+url:                "ShiL1617.github.io"
+#baseurl:            /msr-student-template
 
 # File structure settings
 image_path:         /public/images
