changed url in _config.yml file

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title:              Portfolio Template
 email:              your-email@domain.com
 description:        "Portfolio template for students in the MSR program at Northwestern University"
-url:                "ShiL1617.github.io"
+url:                "https://shil1617.github.io/"
 #baseurl:            /msr-student-template
 
 # File structure settings
