--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title:              Portfolio Template
 email:              your-email@domain.com
 description:        "Portfolio template for students in the MSR program at Northwestern University"
 url:                "https://shil1617.github.io/"
-baseurl:            /msr-student-template
+#baseurl:            /msr-student-template
 
 # File structure settings
 image_path:         /public/images
