--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title:              Portfolio Template
+title:              Luke Shi- Portfolio
 email:              your-email@domain.com
 description:        "Portfolio template for students in the MSR program at Northwestern University"
 url:                "https://shil1617.github.io/"
